[package]
name = "refine-io"
version = "0.1.0"
authors = ["Mathis EON <eon@abes.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.9.24"
dotenv = "0.15.0"
chrono = "0.4.9"
log = "0.4.7"
serde = "*"
env_logger = "*"
clap = "*"
url = "*"
open = "1.3.2"