[package]
name = "refine-io"
version = "0.0.1"
authors = ["Mathis EON <eon.mathis@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.9.24"
dotenv = "0.15.0"
chrono = "0.4.10"
log = "0.4.8"
serde = "1.0.104"
env_logger ="0.7.1"
clap = "2.33.0"
url = "2.1.0"
open = "1.3.2"
serde_json = "1.0"
lazy_static = "1.4.0"
tempfile = "3.1.0"